src/parser/src/parser.cpp
#include "../include/parser.hpp"
#include "../include/parser_config.hpp"
#include "../include/parser_state.hpp"
#include "../include/parser_logger.hpp"
#include "../include/error_recovery.hpp"
#include "../include/grammar.hpp"
#include "../include/ast.hpp"
#include <chrono>
#include <iostream>
#include <stdexcept>

namespace Parser {

// Constructor implementations
SyntacticAnalyzer::SyntacticAnalyzer() : SyntacticAnalyzer(ParserConfig()) {
}

SyntacticAnalyzer::SyntacticAnalyzer(const ParserConfig& config) 
    : config(std::make_unique<ParserConfig>(config))
    , grammar(nullptr)
    , state(std::make_unique<ParserStateManager>())
    , errorRecovery(std::make_unique<ErrorRecoveryManager>())
    , lexerBridge(nullptr)
    , preprocessorBridge(nullptr)
    , semanticInterface(nullptr)
    , currentTokens(nullptr)
    , initialized(false) {
    
    // Validate configuration
    if (!this->config) {
        throw std::invalid_argument("ParserConfig cannot be null");
    }
    
    // Initialize statistics
    resetStatistics();
    
    // Initialize parser components
    initialize();
}

SyntacticAnalyzer::~SyntacticAnalyzer() {
    try {
        cleanup();
    } catch (const std::exception& e) {
        // Log error but don't throw from destructor
        std::cerr << "Warning: Exception during SyntacticAnalyzer cleanup: " << e.what() << std::endl;
    } catch (...) {
        // Log unknown error but don't throw from destructor
        std::cerr << "Warning: Unknown exception during SyntacticAnalyzer cleanup" << std::endl;
    }
}

// Configuration methods
void SyntacticAnalyzer::setConfig(const ParserConfig& config) {
    // Validate new configuration
    if (!config.validate()) {
        auto errors = config.getValidationErrors();
        std::string errorMsg = "Invalid ParserConfig provided";
        if (!errors.empty()) {
            errorMsg += ": " + errors[0];
        }
        throw std::invalid_argument(errorMsg);
    }
    
    // Store old configuration for rollback if needed
    auto oldConfig = std::move(this->config);
    
    try {
        // Set new configuration
        this->config = std::make_unique<ParserConfig>(config);
        
        // Reset parser state
        reset();
        
        // Reinitialize with new configuration
        initialize();
        
    } catch (const std::exception& e) {
        // Rollback to old configuration on failure
        this->config = std::move(oldConfig);
        throw std::runtime_error(std::string("Failed to set new configuration: ") + e.what());
    }
}

// Bridge setup methods
void SyntacticAnalyzer::setLexerBridge(std::unique_ptr<LexerParserBridge> bridge) {
    lexerBridge = std::move(bridge);
}

void SyntacticAnalyzer::setPreprocessorBridge(std::unique_ptr<PreprocessorParserBridge> bridge) {
    preprocessorBridge = std::move(bridge);
}

void SyntacticAnalyzer::setSemanticInterface(std::unique_ptr<SemanticInterface> interface) {
    semanticInterface = std::move(interface);
}

// Grammar setup
void SyntacticAnalyzer::setGrammar(const Grammar& grammar) {
    try {
        // Set new grammar
        this->grammar = std::make_unique<Grammar>(grammar);
        
        // Automatically eliminate left recursion if present
        if (this->grammar && this->grammar->hasLeftRecursion()) {
            PARSER_LOG_INFO("Detected left recursion in provided grammar, applying automatic elimination");
            this->grammar->eliminateLeftRecursion();
        }
        
        // Validate grammar after potential left recursion elimination
        if (!this->grammar->validate()) {
            auto errors = this->grammar->getValidationErrors();
            std::string errorMsg = "Invalid Grammar provided";
            if (!errors.empty()) {
                errorMsg += ": " + errors[0];
            }
            throw std::invalid_argument(errorMsg);
        }
        
        // If parser is already initialized, reinitialize to apply grammar changes
        if (initialized) {
            initialize();
        }
        
    } catch (const std::exception& e) {
        throw std::runtime_error(std::string("Failed to set grammar: ") + e.what());
    }
}

// Main parsing methods
ParseResult<ASTNodePtr> SyntacticAnalyzer::parse() {
    if (!initialized || !lexerBridge) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Parser not properly initialized", SourceRange{}));
    }
    
    currentTokens = lexerBridge->getTokenStream();
    if (!currentTokens) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Failed to get token stream", SourceRange{}));
    }
    
    startTiming();
    if (state) {
        state->reset();
    }
    
    try {
        ASTNodePtr result = parseTranslationUnit();
        endTiming();
        
        if (result && !hasErrors()) {
            return ParseResult<ASTNodePtr>(std::move(result));
        } else {
            return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Parse failed with errors", SourceRange{}));
        }
    } catch (const std::exception& e) {
        endTiming();
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(std::string("Parse exception: ") + e.what(), SourceRange{}));
    }
}

ParseResult<ASTNodePtr> SyntacticAnalyzer::parseExpression() {
    if (!initialized || !currentTokens) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Parser not ready for expression parsing", SourceRange{}));
    }
    
    try {
        ASTNodePtr result = parseExpressionInternal();
        if (result) {
            return ParseResult<ASTNodePtr>(std::move(result));
        } else {
            return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Failed to parse expression", SourceRange{}));
        }
    } catch (const std::exception& e) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(std::string("Expression parse exception: ") + e.what(), SourceRange{}));
    }
}

ParseResult<ASTNodePtr> SyntacticAnalyzer::parseStatement() {
    if (!initialized || !currentTokens) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Parser not ready for statement parsing", SourceRange{}));
    }
    
    try {
        ASTNodePtr result = parseStatementInternal();
        if (result) {
            return ParseResult<ASTNodePtr>(std::move(result));
        } else {
            return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Failed to parse statement", SourceRange{}));
        }
    } catch (const std::exception& e) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(std::string("Statement parse exception: ") + e.what(), SourceRange{}));
    }
}

ParseResult<ASTNodePtr> SyntacticAnalyzer::parseDeclaration() {
    if (!initialized || !currentTokens) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>("Parser not ready for declaration parsing", SourceRange{}));
    }
    
    try {
        // Get current token to determine declaration type
        const Token& currentToken = getCurrentToken();
        
        // DEBUG: Log token being processed in parseDeclaration
        // Processing declaration
        
        // Check for typedef declaration
        if (currentToken.getType() == Lexer::TokenType::TYPEDEF) {
            ASTNodePtr result = parseTypedefDeclaration();
            if (result) {
                return ParseResult<ASTNodePtr>(std::move(result));
            } else {
                const auto& pos = currentToken.getPosition();
                return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(
                    "Failed to parse typedef declaration at line " + std::to_string(pos.line) + 
                    ", column " + std::to_string(pos.column) + 
                    ". Token: '" + currentToken.getLexeme() + "'", SourceRange{}));
            }
        }
        
        // Check for struct declaration
        if (currentToken.getType() == Lexer::TokenType::STRUCT) {
            ASTNodePtr result = parseStructDeclaration();
            if (result) {
                return ParseResult<ASTNodePtr>(std::move(result));
            } else {
                const auto& pos = currentToken.getPosition();
                return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(
                    "Failed to parse struct declaration at line " + std::to_string(pos.line) + 
                    ", column " + std::to_string(pos.column) + 
                    ". Token: '" + currentToken.getLexeme() + "'", SourceRange{}));
            }
        }
        
        // Check for union declaration
        if (currentToken.getType() == Lexer::TokenType::UNION) {
            ASTNodePtr result = parseUnionDeclaration();
            if (result) {
                return ParseResult<ASTNodePtr>(std::move(result));
            } else {
                const auto& pos = currentToken.getPosition();
                return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(
                    "Failed to parse union declaration at line " + std::to_string(pos.line) + 
                    ", column " + std::to_string(pos.column) + 
                    ". Token: '" + currentToken.getLexeme() + "'", SourceRange{}));
            }
        }
        
        // Check for enum declaration
        if (currentToken.getType() == Lexer::TokenType::ENUM) {
            ASTNodePtr result = parseEnumDeclaration();
            if (result) {
                return ParseResult<ASTNodePtr>(std::move(result));
            } else {
                const auto& pos = currentToken.getPosition();
                return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(
                    "Failed to parse enum declaration at line " + std::to_string(pos.line) + 
                    ", column " + std::to_string(pos.column) + 
                    ". Token: '" + currentToken.getLexeme() + "'", SourceRange{}));
            }
        }
        
        // Check if this looks like a declaration (type qualifiers, storage class specifiers, or type specifiers)
        if (currentToken.getType() == Lexer::TokenType::CONST ||
            currentToken.getType() == Lexer::TokenType::VOLATILE ||
            currentToken.getType() == Lexer::TokenType::RESTRICT ||
            currentToken.getType() == Lexer::TokenType::STATIC ||
            currentToken.getType() == Lexer::TokenType::EXTERN ||
            currentToken.getType() == Lexer::TokenType::AUTO ||
            currentToken.getType() == Lexer::TokenType::REGISTER ||
            currentToken.getType() == Lexer::TokenType::INT ||
            currentToken.getType() == Lexer::TokenType::CHAR ||
            currentToken.getType() == Lexer::TokenType::FLOAT ||
            currentToken.getType() == Lexer::TokenType::DOUBLE ||
            currentToken.getType() == Lexer::TokenType::VOID ||
            currentToken.getType() == Lexer::TokenType::SHORT ||
            currentToken.getType() == Lexer::TokenType::LONG ||
            currentToken.getType() == Lexer::TokenType::SIGNED ||
            currentToken.getType() == Lexer::TokenType::UNSIGNED ||
            currentToken.getType() == Lexer::TokenType::IDENTIFIER) {
            
            // Try to parse as variable declaration
            ASTNodePtr result = parseVariableDeclaration();
            if (result) {
                return ParseResult<ASTNodePtr>(std::move(result));
            } else {
                const auto& pos = currentToken.getPosition();
                return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(
                    "Failed to parse variable declaration at line " + std::to_string(pos.line) + 
                    ", column " + std::to_string(pos.column) + 
                    ". Token: '" + currentToken.getLexeme() + "' (type: " + std::to_string(static_cast<int>(currentToken.getType())) + ")", SourceRange{}));
            }
        }
        
        const auto& pos = currentToken.getPosition();
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(
            "Unrecognized declaration at line " + std::to_string(pos.line) + 
            ", column " + std::to_string(pos.column) + 
            ". Token: '" + currentToken.getLexeme() + "' (type: " + std::to_string(static_cast<int>(currentToken.getType())) + ")", SourceRange{}));
        
    } catch (const std::exception& e) {
        return ParseResult<ASTNodePtr>(std::make_unique<SyntaxError>(std::string("Declaration parse exception: ") + e.what(), SourceRange{}));
    }
}

// Implementation of declaration parsing methods (Phase 3.3)
ASTNodePtr SyntacticAnalyzer::parseTypedefDeclaration() {
    // typedef type_specifier declarator;
    if (!consumeToken()) { // consume 'typedef'
        return nullptr;
    }
    
    // Parse type specifiers
    ASTNodePtr typeSpec = parseDeclarationSpecifiers();
    if (!typeSpec) {
        return nullptr;
    }
    
    // Parse declarator
    ASTNodePtr declarator = parseDeclarator();
    if (!declarator) {
        return nullptr;
    }
    
    // Expect semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        auto pos = getCurrentToken().getPosition();
        reportError("Expected ';' after variable declaration at line " + std::to_string(pos.line) + 
                   ", column " + std::to_string(pos.column) + 
                   " but found '" + getCurrentToken().getLexeme() + "'");
        return nullptr;
    }
    consumeToken(); // consume ';'
    
    // Create typedef declaration node
    auto node = createNode(ASTNodeType::TYPE_DECLARATION);
    node->addChild(std::move(typeSpec));
    node->addChild(std::move(declarator));
    
    return node;
}

ASTNodePtr SyntacticAnalyzer::parseStructDeclaration() {
    // struct [identifier] { member_list } [declarator_list];
    if (!consumeToken()) { // consume 'struct'
        return nullptr;
    }
    
    auto node = createNode(ASTNodeType::TYPE_DECLARATION);
    
    // Optional struct tag
    if (getCurrentToken().getType() == Lexer::TokenType::IDENTIFIER) {
        auto identifier = createNode(ASTNodeType::IDENTIFIER);
        identifier->setValue(getCurrentToken().getLexeme());
        node->addChild(std::move(identifier));
        consumeToken();
    }
    
    // Struct body
    if (getCurrentToken().getType() == Lexer::TokenType::LEFT_BRACE) {
        consumeToken(); // consume '{'
        
        // Parse member declarations (simplified for now)
          while (getCurrentToken().getType() != Lexer::TokenType::RIGHT_BRACE && !isAtEnd()) {
               // Skip member parsing for now - will be implemented in later phases
               if (getCurrentToken().getType() == Lexer::TokenType::SEMICOLON) {
                   consumeToken();
               } else {
                   consumeToken(); // Skip current token
               }
           }
        
        if (getCurrentToken().getType() != Lexer::TokenType::RIGHT_BRACE) {
            return nullptr;
        }
        consumeToken(); // consume '}'
    }
    
    // Optional declarator list and semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        // Parse declarator list
        do {
            ASTNodePtr declarator = parseDeclarator();
            if (declarator) {
                node->addChild(std::move(declarator));
            }
            
            if (getCurrentToken().getType() == Lexer::TokenType::COMMA) {
                consumeToken();
            } else {
                break;
            }
        } while (!isAtEnd());
    }
    
    // Expect semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        return nullptr;
    }
    consumeToken(); // consume ';'
    
    return node;
}

ASTNodePtr SyntacticAnalyzer::parseUnionDeclaration() {
    // union [identifier] { member_list } [declarator_list];
    if (!consumeToken()) { // consume 'union'
        return nullptr;
    }
    
    auto node = createNode(ASTNodeType::TYPE_DECLARATION);
    
    // Optional union tag
    if (getCurrentToken().getType() == Lexer::TokenType::IDENTIFIER) {
        auto identifier = createNode(ASTNodeType::IDENTIFIER);
        identifier->setValue(getCurrentToken().getLexeme());
        node->addChild(std::move(identifier));
        consumeToken();
    }
    
    // Union body
    if (getCurrentToken().getType() == Lexer::TokenType::LEFT_BRACE) {
        consumeToken(); // consume '{'
        
        // Parse member declarations (simplified for now)
          while (getCurrentToken().getType() != Lexer::TokenType::RIGHT_BRACE && !isAtEnd()) {
               // Skip member parsing for now - will be implemented in later phases
               if (getCurrentToken().getType() == Lexer::TokenType::SEMICOLON) {
                   consumeToken();
               } else {
                   consumeToken(); // Skip current token
               }
           }
        
        if (getCurrentToken().getType() != Lexer::TokenType::RIGHT_BRACE) {
            return nullptr;
        }
        consumeToken(); // consume '}'
    }
    
    // Optional declarator list and semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        // Parse declarator list
        do {
            ASTNodePtr declarator = parseDeclarator();
            if (declarator) {
                node->addChild(std::move(declarator));
            }
            
            if (getCurrentToken().getType() == Lexer::TokenType::COMMA) {
                consumeToken();
            } else {
                break;
            }
        } while (!isAtEnd());
    }
    
    // Expect semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        return nullptr;
    }
    consumeToken(); // consume ';'
    
    return node;
}

ASTNodePtr SyntacticAnalyzer::parseEnumDeclaration() {
    // enum [identifier] { enumerator_list } [declarator_list];
    if (!consumeToken()) { // consume 'enum'
        return nullptr;
    }
    
    auto node = createNode(ASTNodeType::TYPE_DECLARATION);
    
    // Optional enum tag
    if (getCurrentToken().getType() == Lexer::TokenType::IDENTIFIER) {
        auto identifier = createNode(ASTNodeType::IDENTIFIER);
        identifier->setValue(getCurrentToken().getLexeme());
        node->addChild(std::move(identifier));
        consumeToken();
    }
    
    // Enum body
    if (getCurrentToken().getType() == Lexer::TokenType::LEFT_BRACE) {
        consumeToken(); // consume '{'
        
        // Parse enumerator list
        while (getCurrentToken().getType() != Lexer::TokenType::RIGHT_BRACE && !isAtEnd()) {
            if (getCurrentToken().getType() == Lexer::TokenType::IDENTIFIER) {
                auto enumerator = createNode(ASTNodeType::IDENTIFIER);
                enumerator->setValue(getCurrentToken().getLexeme());
                node->addChild(std::move(enumerator));
                consumeToken();
                
                // Optional value assignment
                if (getCurrentToken().getType() == Lexer::TokenType::ASSIGN) {
                    consumeToken(); // consume '='
                    // Skip the value for now - will be implemented in expression parsing phase
                    if (getCurrentToken().getType() == Lexer::TokenType::INTEGER_LITERAL) {
                        consumeToken();
                    }
                }
                
                // Optional comma
                if (getCurrentToken().getType() == Lexer::TokenType::COMMA) {
                    consumeToken();
                }
            } else {
                consumeToken(); // Skip unexpected token
            }
        }
        
        if (getCurrentToken().getType() != Lexer::TokenType::RIGHT_BRACE) {
            return nullptr;
        }
        consumeToken(); // consume '}'
    }
    
    // Optional declarator list and semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        // Parse declarator list
        do {
            ASTNodePtr declarator = parseDeclarator();
            if (declarator) {
                node->addChild(std::move(declarator));
            }
            
            if (getCurrentToken().getType() == Lexer::TokenType::COMMA) {
                consumeToken();
            } else {
                break;
            }
        } while (!isAtEnd());
    }
    
    // Expect semicolon
    if (getCurrentToken().getType() != Lexer::TokenType::SEMICOLON) {
        return nullptr;
    }
    consumeToken(); // consume ';'
    
    return node;
}

ASTNodePtr SyntacticAnalyzer::parseVariableDeclaration() {
    // Parse type specifiers first to get the type
    ASTNodePtr typeSpec = parseDeclarationSpecifiers();
    if (!typeSpec) {
        auto pos = getCurrentToken().getPosition();
        reportError("Failed to parse type specifier at line " + std::to_string(pos.line) + 
                   ", column " + std::to_string(pos.column) + 
                   ". Expected type (int, float, char, etc.) but found '" + getCurrentToken().getLexeme() + "'");
        return nullptr;
    }
    
    // Extract type name from type specifier
    std::string typeName = "unknown";
    if (typeSpec && typeSpec->getType() == ASTNodeType::IDENTIFIER && !typeSpec->getValue().empty()) {
        typeName = typeSpec->getValue();
    }

    // Create a declaration list to hold multiple variable declarations
    auto declList = std::make_unique<DeclarationList>();
    
    // Parse first declarator
    ASTNodePtr declarator = parseDeclarator();
    if (!declarator) {
        auto pos = getCurrentToken().getPosition();
        reportError("Failed to parse variable name at line " + std::to_string(pos.line) + 
                   ", column " + std::to_string(pos.column) + 
                   ". Expected identifier but found '" + getCurrentToken().getLexeme() + "'");
        return nullptr;
    }
    
    // Extract variable name from declarator
    std::string varName = "unknown";
    if (!declarator->getValue().empty()) {
        varName = declarator->getValue();
    }
